# printwright-x402

./: .dockerignore  .env.example  .gitignore  .rubocop.yml  Dockerfile  Gemfile  README.md  docker-compose.yml  package-lock.json  package.json
.kamal/: secrets
client/: LICENSE  README.md  index.d.ts  index.js  package-lock.json  package.json
config/: application.rb  brakeman.ignore  ci.rb  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  recurring.yml  routes.rb  storage.yml
conformance/: README.md  suite.mjs
db/: schema.rb  seeds.rb
docs/: OPERATIONS.md
mcp/: LICENSE  README.md  package-lock.json  package.json  purchase.mjs  server.json  server.mjs
octoprint-printwright/: Dockerfile.smoke  README.md  pyproject.toml
octoprint-printwright/octoprint_printwright/: __init__.py  payment.py
octoprint-printwright/octoprint_printwright/templates/: printwright_settings.jinja2
octoprint-printwright/tests/: test_payment.py  test_plugin.py
public/: 404.html  422.html  500.html  external-profile-v1.schema.json  llms.txt  openapi.json  printwright-verify-widget.js  pwc-1.schema.json  widget-example.html
scripts/: buy.mjs  canonicalize_stl.rb  check_seed_assets.rb  demo-wallet.mjs  fund-buyer.mjs  generate_seed_assets.sh  load-sanity.mjs  load-sanity.test.mjs  octoprint_spike_smoke.sh  print-job.mjs  slicer_estimate_spike.rb  smoke.mjs
selfhost-facilitator/: .env.example  README.md  package-lock.json  package.json  server.mjs
sidecar/: .env.example  Dockerfile  app.mjs  hedera.mjs  instrument.mjs  package-lock.json  package.json  server.mjs
(+479 files in other folders)
