[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "OctoPrint-Printwright"
version = "0.1.0"
description = "License OctoPrint jobs through Printwright's x402 per-print rail."
readme = "README.md"
requires-python = ">=3.10,<4"
license = "MIT"
authors = [{ name = "Printwright contributors" }]
classifiers = [
  "Framework :: OctoPrint",
  "Programming Language :: Python :: 3",
]

[project.entry-points."octoprint.plugin"]
printwright = "octoprint_printwright"

[tool.setuptools.packages.find]
include = ["octoprint_printwright*"]

[tool.setuptools.package-data]
octoprint_printwright = ["templates/*.jinja2"]
